--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -14,7 +14,7 @@ AR        = ar cr
 ECHO      = /bin/echo
 
 CFLAGS = -O3 -m32 -Wall -DTA_KB_SETTING $(PKGFLAG)
-CFLAGS = -O3 -Wall -DTA_KB_SETTING -std=c++11 -pthread $(PKGFLAG)
+CFLAGS = -g -O2 -Wall -DTA_KB_SETTING -std=gnu++11 -pthread $(PKGFLAG)
 #CFLAGS = -g -Wall -DTA_KB_SETTING $(PKGFLAG)
 
 .PHONY: depend extheader
